css/style.css
@font-face {
    font-family: 'Free Sans';
    src: url("../fonts/Free Sans Bold.ttf");
}

@font-face {
    font-family: 'Akira Expanded';
    src: url("../fonts/Akira Expanded Demo.otf");
}

* {
    margin: 0;
	font-family: 'Free Sans';
}

body {
    width: 100%;
    display: flex;
    flex-direction: column;
	max-width: 600px;
	margin: 0 auto;
}

section {
	margin: 1em 1.5em;
}

i {
	color: #333;
}

.header {
	white-space: nowrap;
}

#title-container {
	width: 100%; height: 3.5em;
	background: white;
	position: sticky; top: 0;
	display: flex;
	align-items: center;
	justify-content: center;
}

#h-title {
	font-size: 1.6em;
}

#social-wrapper {
	display: flex;
	justify-content: space-evenly;
}

#ul-social {
	list-style-type: none;
	padding: 0;
}

.a-li {
	font-size: 1em;
}

#albums {
	max-width: 100%;
	min-height: 15em;
	height: 20em;
	margin: 0.5em 1em;
	display: flex;
	align-items: center;
	overflow-x: scroll;
}

iframe {
    border: none;
}

#images {
	max-width: 100%;
	padding-bottom: 1.5em;
}

figure {
	display: flex;
	flex-direction: column;
}

img {
	max-width: 100%;
	margin-top: 0.5em;
}

figcaption {
	font-size: 0.7em;
	font-family: 'Calibri';
	padding: 0.3em 0.4em 0 0.4em;
}

